Frames changed to grid() instead of pack() Used .grid_propagate(0) to force w and h Fixed type in loadConfig readStartAddr

--- a/dubrovnik.cfg
+++ b/dubrovnik.cfg
@@ -1,5 +1,5 @@
 {
-   "autoConnect": 0,
+   "autoConnect": 1,
    "lastUsedPort": "COM5",
    "eraseBlkSize": "4",
    "eraseStartAddr": "ffa",
@@ -9,6 +9,6 @@
    "progStartAddr": "3fa",
    "progLength": "fa",
    "readSpiMode": "SPI",
-   "readStartAddr": "3cf",
+   "readStartAddr": "af",
    "readEndAddr": "3cf"
 }
