--- a/dubrovnik.cfg
+++ b/dubrovnik.cfg
@@ -1,14 +1,14 @@
 {
    "autoConnect": 1,
-   "lastUsedPort": "COM5",
+   "lastUsedPort": "COM7",
    "eraseBlkSize": "4",
-   "eraseStartAddr": "ffa",
-   "eraseNumBlocks": "5",
-   "progPattern": "cabacafe",
-   "progIncrement": "2",
-   "progStartAddr": "3fa",
-   "progLength": "fa",
+   "eraseStartAddr": "0",
+   "eraseNumBlocks": "1",
+   "progPattern": "cafe0000",
+   "progIncrement": "1",
+   "progStartAddr": "0",
+   "progLength": "100",
    "readSpiMode": "SPI",
-   "readStartAddr": "af",
-   "readEndAddr": "3cf"
+   "readStartAddr": "0",
+   "readLength": "200"
 }
