--- a/dubrovnik.cfg
+++ b/dubrovnik.cfg
@@ -1,14 +1,14 @@
 {
    "autoConnect": 1,
-   "lastUsedPort": "COM7",
+   "lastUsedPort": "",
    "eraseBlkSize": "4",
    "eraseStartAddr": "0",
    "eraseNumBlocks": "1",
    "progPattern": "cafe0000",
    "progIncrement": "1",
    "progStartAddr": "0",
-   "progLength": "100",
+   "progLength": "400",
    "readSpiMode": "SPI",
    "readStartAddr": "0",
-   "readLength": "200"
+   "readLength": "800"
 }
