added serialTerminalShell by Noel

--- a/dubrovnik.cfg
+++ b/dubrovnik.cfg
@@ -1,9 +1,9 @@
 {
    "autoConnect": 1,
-   "lastUsedPort": "",
-   "eraseBlkSize": "4",
-   "eraseStartAddr": "0",
-   "eraseNumBlocks": "1",
+   "lastUsedPort": "COM7",
+   "eraseBlkSize": "32",
+   "eraseStartAddr": "8000",
+   "eraseNumBlocks": "5",
    "progPattern": "cafe0000",
    "progIncrement": "1",
    "progStartAddr": "0",
